--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,30 @@
+# http://editorconfig.org
 root = true
 
-[*.js]
-indent_style=tab
-trim_trailing_whitespace=true
+[*]
+charset = utf-8
+end_of_line = lf
+indent_size = 4
+indent_style = tab
+insert_final_newline = true
+max_line_length = 80
+trim_trailing_whitespace = true
 
-[*.json]
-indent_style=tab
-trim_trailing_whitespace=true
+[*.md]
+max_line_length = 0
+trim_trailing_whitespace = false
+
+[*.min.js]
+max_line_length = 0
+trim_trailing_whitespace = false
+
+[*.yml]
+indent_size = 2
+indent_style = space
+
+[package.json]
+indent_size = 2
+indent_style = space
+
+[COMMIT_EDITMSG]
+max_line_length = 40
