--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "cross-env DEBUG=connc* mocha test/test_*.js",
     "test-cov": "istanbul cover _mocha -- test/test_* --reporter dot",
+    "test-eslint": "eslint .",
     "test-travis": "istanbul cover _mocha --report lcovonly -- test/test_* --reporter dot"
   },
   "repository": {
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "cross-env": "^2.0.0",
+    "eslint": "^5.0.0",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.3"
