--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.1",
+    "body": "^5.1.0",
     "ckit": "^0.1.0",
     "content-disposition": "^0.5.2",
     "debug": "^3.1.0",
-    "lodash": "^4.17.10"
+    "formidable": "^1.2.1",
+    "lodash": "^4.17.10",
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "cross-env": "^2.0.0",
