--- a/.npmignore
+++ b/.npmignore
@@ -5,7 +5,8 @@ package-lock.json
 .gitignore
 .travis.yml
 .gitattributes
-.eslintrc
+.eslintrc.js
+.eslintignore
 .editorconfig
 .npmignore
 .tags*
