--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint .",
     "test": "cross-env DEBUG=connc* mocha test/test_*.js",
     "test-cov": "istanbul cover _mocha -- test/test_* --reporter dot",
-    "test-travis": "istanbul cover _mocha --report lcovonly -- test/test_* --reporter dot"
+    "test-ci": "istanbul cover _mocha --report lcovonly -- test/test_* --reporter dot"
   },
   "repository": {
     "type": "git",
