--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ node_js:
 
 script:
   # - npm run-script lint
-  - npm run-script test-travis
+  - npm run-script test-ci
 
 after_script:
   - npm install coveralls@2 && cat ./coverage/lcov.info | coveralls
